RESOLVED FIXED93769
Stop Y-flipping CrOS/ARM video textures
https://bugs.webkit.org/show_bug.cgi?id=93769
Summary Stop Y-flipping CrOS/ARM video textures
Ami Fischman
Reported 2012-08-11 13:57:28 PDT
Stop Y-flipping CROS/ARM video textures
Attachments
Patch (1.98 KB, patch)
2012-08-11 13:58 PDT, Ami Fischman
no flags
Patch (1.98 KB, patch)
2012-08-12 09:54 PDT, Ami Fischman
no flags
Patch (1.97 KB, patch)
2012-08-12 09:55 PDT, Ami Fischman
no flags
Ami Fischman
Comment 1 2012-08-11 13:58:51 PDT
Eric Seidel (no email)
Comment 2 2012-08-12 02:40:08 PDT
Comment on attachment 157878 [details] Patch OK.
WebKit Review Bot
Comment 3 2012-08-12 03:40:47 PDT
Comment on attachment 157878 [details] Patch Rejecting attachment 157878 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: FLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 CSSComputedStyleDeclaration::cssText() should use StringBuilder When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13484329
Ami Fischman
Comment 4 2012-08-12 09:54:49 PDT
Ami Fischman
Comment 5 2012-08-12 09:55:38 PDT
WebKit Review Bot
Comment 6 2012-08-12 10:40:41 PDT
Comment on attachment 157904 [details] Patch Clearing flags on attachment: 157904 Committed r125378: <http://trac.webkit.org/changeset/125378>
WebKit Review Bot
Comment 7 2012-08-12 10:40:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.