Stop Y-flipping CROS/ARM video textures https://bugs.webkit.org/show_bug.cgi?id=93769

Reviewed by Eric Seidel.

No new tests; there's no cros/arm bot yet, sadly.

* platform/graphics/chromium/cc/CCVideoLayerImpl.cpp:
(WebCore::CCVideoLayerImpl::appendQuads): drop the single-platform Y-flipping in prep for the platform doing the flip natively.


Canonical link: https://commits.webkit.org/111653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125378 268f45cc-cd09-0410-ab3c-d52691b4dbfc