Source/WebCore/platform/graphics/chromium/cc/CCVideoLayerImpl.cpp
@@ -215,13 +215,7 @@ void CCVideoLayerImpl::appendQuads(CCQuadSink& quadList, const CCSharedQuadState
         // NativeTexture hardware decoder.
         bool premultipliedAlpha = true;
         FloatRect uvRect(0, 0, 1, 1);
-#if defined(OS_CHROMEOS) && defined(__ARMEL__)
-        bool flipped = true; // Under the covers, implemented by OpenMAX IL.
-#elif OS(WINDOWS)
-        bool flipped = false; // Under the covers, implemented by DXVA.
-#else
-        bool flipped = false; // LibVA (cros/intel), MacOS.
-#endif
+        bool flipped = false;
         OwnPtr<CCTextureDrawQuad> textureQuad = CCTextureDrawQuad::create(sharedQuadState, quadRect, m_externalTextureResource, premultipliedAlpha, uvRect, flipped);
         quadList.append(textureQuad.release());
         break;
